# internet_shop

./: .env.example  package-lock.json  pyproject.toml
myshop/cart/: cart.py  views.py
myshop/cart/templates/cart/: detail.html
myshop/myshop/: settings.py  urls.py
myshop/orders/: admin.py  models.py  tasks.py  urls.py  views.py
myshop/orders/migrations/: 0001_initial.py  0002_order_stripe_id.py
myshop/orders/templates/admin/orders/order/: detail.html
myshop/orders/templates/orders/order/: create.html  pdf.html
myshop/payment/: views.py
myshop/payment/application/: webhooks.py
myshop/payment/templates/payment/: process.html
myshop/shop/: models.py  urls.py  views.py
myshop/shop/migrations/: 0001_initial.py
myshop/shop/static/css/: base.css
myshop/shop/templates/shop/: base.html
myshop/shop/templates/shop/product/: detail.html  list.html
