[tool.poetry]
name = "internet shop"
version = "0.1.0"
description = "Internet shop on Django with Celery and Redis"
authors = ["catstyle1101 <anton.m.rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
